# Incident-Management-System-IMS-

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: retry.py
backend/app/models/: __init__.py  domain.py
backend/app/services/: __init__.py  alerting.py  incident_service.py
backend/app/storage/: __init__.py  memory.py
backend/tests/: test_alerting.py  test_api_endpoints.py  test_incident_service.py  test_rate_limit.py
docs/: architecture.md  backpressure.md  pdf-submission-summary.md  requirements-traceability.md  testing.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/lib/: api.ts
prompts/: creation-notes.md
scripts/: load_test.py  sample_failure_events.json  seed_failure_stream.py
